my ecomerce website demo complete

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,25 @@ width:100px;
 .card{
   border: none;
   box-shadow: 5px 5px 10px lightgray;
+  border-radius: 10px;
 
 
+}
+ .buy-now-btn:hover{
+  cursor: pointer;
+  background-color: rgb(255, 20, 147);
+  padding: 5px 10px;
+
+} 
+
+#contact-us{
+  height: 300px;
+}
+#contact-us h6{
+  color: gray;
+}
+.card-footer {
+
+  background-color: none;
+  border-top:none;
 }
